--- a/writing-better-sentences.qmd
+++ b/writing-better-sentences.qmd
@@ -1,1 +1,14 @@
 # Writing better sentences
+
+## How do we improve sentences?
+
+Bennett Rules:
+https://www.earlymoderntexts.com/assets/jfb/bengor.pdf
+1.  Verbs are better than nouns
+2.  Adverbs are better than adjectives
+3.  Favour the Anglo-Saxon
+4.  Banish 'very' and its ilk
+5.  Abstract nouns should be fought like the devil
+6.  Avoid undue repetition
+7.  Be careful with commas.
+8.  Attend to the sound
