--- a/R/draw-figures.qmd
+++ b/R/draw-figures.qmd
@@ -26,3 +26,12 @@ dt |> ggplot(aes(x = Year, y = Share, colour = Platform, group = Platform)) +
 
 ggsave("../img/uk-web-views-2011-2022.png", bg = "white", width = 10, height = 7.5)
 ```
+
+## Resize gov image
+
+```{r}
+library(magick)
+img <- image_read("../img/20955195028_1c7fd77e6b_o.png")
+
+img |> image_background("white", flatten = TRUE) |> image_scale(geometry = "33%") |> image_write(path = "../img/small-gov.png")
+```
