--- a/index.qmd
+++ b/index.qmd
@@ -1,18 +1,19 @@
+---
+bibliography: references.bib
+---
+
 # Preface {.unnumbered}
 
-```{r}
-#| label: fig-uk-web-use
-#| echo: false
-#| fig-cap: |
-#|   The world wide web turned 34 years old in 2023. The grey line shows the share
-#|   of web views in the UK from desktop computers and the red line shows the share of
-#|   web views in the UK from mobile devices.
-#| fig-alt: |
-#|   A figure with two lines, one for desktop computers and the other for mobile devices 
-#|   showing how views of the world wide web changed in the 
-#|   UK from mostly desktop devices in 2011 to 50% desktop and 50% mobile 
-#|   devices by 2022.
-#| out.width: NULL
+This short book has been created as a resource for librarians at the University of Southampton and aims to aggregates the most pertinant information found elsewhere about how to create effective webpages for delivering information to library users.
 
-knitr::include_graphics("img/uk-web-views-2011-2022.png", dpi = 300)
-```
+The aim here is to encourage you to consider what we know about what works and why, rather than create a rigid framework that you must follow. The overarching questions under consideration are:
+
+-   What do we know about how users engage with webpages?
+
+-   What do we know about human cognition that applies to webpage design?
+
+-   And most importantly, what are we actually trying to achieve?
+
+Defining our aims can be challenging, but we can lean on Stuart Sutherland's definition of acting rationally [@sutherland2007] when trying to understand if we have answered the third question in the light of the the first two:
+
+If our design choices aid achieving our aims they are rational. Whereas if our design choices hinder or confound our aims, they are irrational.
