--- a/references.bib
+++ b/references.bib
@@ -22,3 +22,14 @@
 	url = {https://www.earlymoderntexts.com/assets/jfb/bengor.pdf},
 	langid = {en}
 }
+
+@book{redish2012,
+	title = {Letting go of the words : writing web content that works},
+	author = {Redish, Janice.},
+	year = {2012},
+	date = {2012},
+	publisher = {Morgan Kaufmann},
+	url = {http://site.ebrary.com/id/10578534},
+	address = {[Waltham, MA]},
+	langid = {English}
+}
