--- a/what-to-read-instead.qmd
+++ b/what-to-read-instead.qmd
@@ -18,4 +18,4 @@ Here are some links to some pages I considered highly relevant for librarians fr
 
 <https://www.gov.uk/guidance/content-design/writing-for-gov-uk>
 
-If you prefer a book, [Letting go of the words by Janice Redish](https://southampton.on.worldcat.org/oclc/798674328) covers many of the same topics.
+If you prefer a book, [Letting go of the words by Janice Redish](https://southampton.on.worldcat.org/oclc/798674328) [@redish2012] covers many of the same topics.
