--- a/how-people-read-webpages.qmd
+++ b/how-people-read-webpages.qmd
@@ -1,5 +1,8 @@
 # How people read webpages {#sec-how-do-people-read-webpages}
 
+People don't read webpages in the traditional sense of the beginning to the end, 
+they ***scan*** the page for the information they came for.
+
 ## What's the first thing we do on landing on a web page?
 
 Check we are where we want to be! If not, we move on.
@@ -11,5 +14,3 @@ What does that imply about page design?
 -   We scan in an F-pattern.
 
 -   Long form (\>1,000 words) we read in chunks, look for summaries, highlights or key-points.
-
-## Are there differences between desktop/laptop and mobile devices?
