--- a/how-to-write-for-the-web.qmd
+++ b/how-to-write-for-the-web.qmd
@@ -4,9 +4,12 @@ bibliography: references.bib
 
 # How to write for the web {#sec-how-to-write-for-the-web}
 
+[Summary:]{.highlight} Good writing is easy to read and understand. It uses short sentences, 
+simple vocabulary and is broken into chunks. 
+
 [NN/g UX Writing: Study Guide](https://www.nngroup.com/articles/ux-writing-study-guide/)
 
-# Writing better sentences
+# How to write better sentences
 
 Bennett Rules [@bennett1997] :
 
