--- a/what-to-read-instead.qmd
+++ b/what-to-read-instead.qmd
@@ -1,21 +1,26 @@
 # What to read instead {#sec-what-to-read-instead}
 
-Given the enormous economic value of the world wide web and attracting users to ones site, there are considerable research efforts into user experience in both the commercial and public sectors.
+Given the enormous economic value of the world wide web and attracting users to ones site, there are considerable research efforts into user experience (UX) in both the commercial and public sectors.
 
-Two leading groups are in the private sector the [Nielsen Norman Group (NN/g)](https://www.nngroup.com/){target="_blank"}, and in the public sector the [UK Government Digital Service (GDS)](https://www.gov.uk/government/organisations/government-digital-service).
+Two leading groups are the US private sector the [Nielsen Norman Group](https://www.nngroup.com/){target="_blank"} (NN/g), and in the public sector the [GOV.UK: Government Digital Service](https://www.gov.uk/government/organisations/government-digital-service).
 
 Both these groups provide extensive materials detailing their research and guidance on what works (and what doesn't). I encourage readers to explore their websites and beyond.
 
-Here are some links to some pages I considered highly relevant for librarians from the NN/g and the GDS:
+Here are some links to some pages I considered highly relevant for librarians:
 
-<https://www.nngroup.com/articles/how-users-read-on-the-web/>
+-   [NN/g: Writing for the Web Articles & Videos](https://www.nngroup.com/topic/writing-web/){.uri}
 
-<https://www.nngroup.com/topic/writing-web/>
+```{=html}
+<!-- -->
+```
+-   [NN/g: Psychology for UX: Study Guide](https://www.nngroup.com/articles/psychology-study-guide/){.uri}: a collection of links to NN/g articles and videos about principles of human psychology and how they relates to user experience design.
 
-<https://www.nngroup.com/articles/psychology-study-guide/>
+-   [GOV.UK: Content design: planning, writing and managing content](https://www.gov.uk/guidance/content-design/writing-for-gov-uk){.uri}: this page covers and links to NN/g research, but from a UK public sector viewpoint
 
-<https://www.gov.uk/guidance/government-design-principles>
+-   [GOV.UK: Government Design Principles](https://www.gov.uk/guidance/government-design-principles){.uri}: as the title says this page covers the principles of design which may be relevant for thinking about whether a webpage needs to exist at all.
 
-<https://www.gov.uk/guidance/content-design/writing-for-gov-uk>
+-   If you prefer a book, [Letting go of the words by Janice Redish](https://southampton.on.worldcat.org/oclc/798674328) [@redish2012] covers many of the same topics.
 
-If you prefer a book, [Letting go of the words by Janice Redish](https://southampton.on.worldcat.org/oclc/798674328) [@redish2012] covers many of the same topics.
+## What we won't cover
+
+It's worth noting that both NN/g and GOV.UK use data and user testing as part of their UX design process. This is not something we'll considering here, but one would expect this to improve our webpages if we could include this.
