--- a/references.bib
+++ b/references.bib
@@ -33,3 +33,13 @@
 	address = {[Waltham, MA]},
 	langid = {English}
 }
+
+@book{howpeop2021,
+	title = {How People Read Online : The Eyetracking Evidence},
+	year = {2021},
+	date = {2021},
+	publisher = {Nielsen Norman Group},
+	edition = {2nd edition.},
+	address = {Fremont, CA},
+	langid = {English}
+}
