--- a/references.bib
+++ b/references.bib
@@ -45,3 +45,34 @@
 	address = {Fremont, CA},
 	langid = {English}
 }
+
+@article{miller1994,
+	title = {The magical number seven, plus or minus two: Some limits on our capacity for processing information},
+	author = {Miller, George A.},
+	year = {1994},
+	date = {1994},
+	journal = {Psychological Review},
+	pages = {343--352},
+	volume = {101},
+	number = {2},
+	doi = {10.1037/0033-295X.101.2.343},
+	note = {Place: US
+Publisher: American Psychological Association}
+}
+
+@article{ma2014,
+	title = {Changing concepts of working memory},
+	author = {Ma, Wei Ji and Husain, Masud and Bays, Paul M.},
+	year = {2014},
+	month = {03},
+	date = {2014-03},
+	journal = {Nature Neuroscience},
+	pages = {347--356},
+	volume = {17},
+	number = {3},
+	doi = {10.1038/nn.3655},
+	url = {https://www.nature.com/articles/nn.3655},
+	note = {Number: 3
+Publisher: Nature Publishing Group},
+	langid = {en}
+}
