--- a/how-people-read-webpages.qmd
+++ b/how-people-read-webpages.qmd
@@ -12,17 +12,23 @@ NN/g publish a book called [How People Read on the Web](https://www.nngroup.com/
 
     > The acts of scanning and reading are quite different. Reading includes looking at most words in chronological order in a section or on an entire page. But when scanning, people look at words, headings, or sections of pages, often out of order, fixating on only some of the words, not entire lines of text.
 
--   The hypothesis they present for why we scan is similar to that of [desire lines](https://en.wikipedia.org/wiki/Desire_path): human behaviour seeks out the most efficient (lazy if you prefer) way to do things. Users have found that scanning on the web is more efficient than reading.
+-   The hypothesis NN/g present for why we scan is because users are often looking for specific information when reading on the web. This is different kind of task to reading a story or learning a subject step-wise.
 
--   We scan in a variety of [gaze patterns](https://www.nngroup.com/articles/text-scanning-patterns-eyetracking/) and therefore we should design and structure our pages for ease of scanning.
+    The behaviour is similar to that of [desire lines](https://en.wikipedia.org/wiki/Desire_path), humans seeking out the most efficient (or lazy if you prefer) way to do things. Users have found that scanning on the web is more efficient than reading for extracting information.
 
-## Working memory
+-   NN/g observe we scan in a variety of [gaze patterns](https://www.nngroup.com/articles/text-scanning-patterns-eyetracking/) and therefore we should design and structure our pages for ease of scanning.
 
-Our working memory is how we store information in the short term. George Miller famously proposed in 1956 that we can hold seven plus or minus two items of information in mind @miller1994. More recent evidence suggests that the quality as much as the quantity of the information affects our ability to retain information @ma2014. What is clear is that capacity is limited and this is related to cognitive load.
+## Working memory {#sec-working-memory}
 
-So what to do to minimize CL?
+Our working memory is how we store information in the short term. George Miller famously proposed in 1956 that our working memory can hold seven plus or minus two items of information @miller1994. More recent evidence suggests that the quality as much as the quantity of the information affects our ability to retain information @ma2014.
 
-University of Southampton Library webpages are predominantly text and links. A quick browse suggested that most pages contain between 600 and 1,200 words. Based on a reading speed of 300 words per minute, this equates to between 2 and 4 minutes if one were to read the entire text. Users are unlikely to do this, so we need to facilitate their identification of the parts relevant to them before they give up.
+What is clear is that capacity is limited and that this relates to cognitive load in terms of the quantity and/or difficulty of the information we can retain in the short-term i.e. seconds to minutes.
+
+University of Southampton Library webpages are predominantly text and links. A quick browse suggested that most pages contain between 600 and 1,200 words. Based on a reading speed of 300 words per minute, this equates to between 2 and 4 minutes if one were to read the entire text.
+
+Users are unlikely to read entire pages, let alone retain the contents, so we need to facilitate their parsing of the constitute parts so they can identify the information relevant to their visit.
+
+This can by done by minimising cognitive load through page structure, well-written content (@sec-how-to-write-for-the-web) and consistency between pages.
 
 ## The unconsidered webpage is not worth creating {#sec-the-unconsidered-webpage-is-not-worth-creating}
 
@@ -34,7 +40,7 @@ In @sec-how-to-write-for-the-web I outline some practical ways to improve writin
 
 -   how and at what level of detail to present the content to them
 
-Careful consideration increases the likelihood of creating relevant content in an appropriate form, as opposed to a long winded page that no-one reads.
+Careful consideration increases the likelihood of creating relevant content in an appropriate form, as opposed to a long winded page that no-one reads. For the reasons outlined in @sec-working-memory.
 
 ## How to structure a webpage for ease of scanning {#sec-how-to-structure-a-webpage-for-ease-of-scanning}
 
@@ -48,30 +54,24 @@ Hence the summaries at the start of each chapter page.
 
 This approach is also reflected in the [inverted pyramid](https://www.nngroup.com/articles/inverted-pyramid/) strategy where the information most likely to engage the user comes first, followed by the secondary, tertiary etc. information. Those who want detail can find it further down the page, but those who are only interested in the main point are served it immediately.
 
-<https://www.nngroup.com/articles/best-font-for-online-reading/>
-
-<https://insidegovuk.blog.gov.uk/2023/11/01/a-bold-new-look-for-the-gov-uk-homepage/>
-
 <https://www.nngroup.com/articles/formatting-long-form-content/>
 
 ### Use informative headings
 
 Headings are usually in
 
--   Long form (\>1,000 words) we read in chunks, look for summaries, highlights or key-points.
-
 Informative headings also help with accessibility.
 
-<!-- -->
+### Chunks, bullets, summaries and callouts
 
--   Inverted pyramid, with summary
+### Bolding and highlight
 
--   Informative headings
+### Helpful visuals
 
--   Chunks, bullets and callouts
+Good visuals
 
--   Bolding and highlight
+### Fonts matter
 
--   Helpful visuals
+But not as much as you might think.
 
--   Boring is good
+<https://www.nngroup.com/articles/best-font-for-online-reading/>
