update reading summary

--- a/how-people-access-webpages.qmd
+++ b/how-people-access-webpages.qmd
@@ -1,8 +1,8 @@
 # How people access the web {#sec-how-people-access-the-web}
 
-[Summary:]{.highlight} In the UK, people are now as likely to access the web via a mobile device as they are a traditional desktop or laptop computer. This suggests we should design webpages to provide a consistent user experience across devices.
-
-------------------------------------------------------------------------
+::: {.callout-important .unnumbered title="Summary" appearance="simple" icon="false"}
+In the UK, people are now as likely to access the web via a mobile device as they are a traditional desktop or laptop computer. This suggests we should design webpages to provide a consistent user experience across devices.
+:::
 
 ## Mobile devices now account for 50% of webpage views in the UK {#sec-mobile-devices-now-account-for-50-of-webpage-views-in-the-uk}
 
